# duties

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
duties/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
duties/migrations/: 0001_initial.py  0002_rename_userprofile_profile.py  0003_profile_color.py  0004_alter_profile_color.py  0005_auto_20210728_0757.py  0006_auto_20210728_2343.py  0007_profile_groups_managed.py
duties/static/duties/css/: base.css  calendar.css  login.css
duties/static/duties/js/: calendar.js
duties/templates/duties/: base.html  calendar.html  login.html
duties/templatetags/: calendar_filters.py
project/: .env.demo  settings.py  urls.py
