[tool.poetry]
name = "duties"
version = "0.1.0"
description = "Duties calendar"
authors = ["Sergey Petrin <spetrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
python-decouple = "^3.4"
loguru = "^0.5.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
mimesis = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
